menu.less: Fix level-2 flyout caret overlapping hovered level-2 item

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -124,6 +124,7 @@
   // Collapse menu by default
   display: none;
   line-height: 1.833em; // 22px
+  z-index: 12;
 
   > a {
     color: @menu-2ndlvl-color;
